--- a/src/style.css
+++ b/src/style.css
@@ -1,243 +1,259 @@
-:root
-{
-    --largura_fundo: 842.1656px;
-    --altura_fundo: 595.2756px;
-    --margin_topo: 8.2147px;
-    --margin_dir: 4.5491px;
-    --cor_fonte_1: #2D2C4F;
-    --cor_fonte_2: #FFFFFF;
+:root {
+  --largura_fundo: 842.1656px;
+  --altura_fundo: 595.2756px;
+  --margin_topo: 8.2147px;
+  --margin_dir: 4.5491px;
+  --cor_fonte_1: #2d2c4f;
+  --cor_fonte_2: #ffffff;
 }
 
-@font-face
-{
-    font-family: "Gotham Bold";
-    src: url(/fonts/Gotham\ Bold.otf);
+@font-face {
+  font-family: "Gotham Bold";
+  src: url(/fonts/Gotham\ Bold.otf);
 }
 
-*
-{
+* {
+  margin: 0 auto;
+  padding: 0;
+  font-family: "Gotham Bold";
+}
+
+body {
+  form.corpo {
+    width: var(--largura_fundo);
+    height: var(--altura_fundo);
     margin: 0 auto;
-    padding: 0;
-    font-family: 'Gotham Bold';
-}
+    display: grid;
+    align-items: start;
+    justify-items: start;
 
-body
-{
-    form.corpo
-    {
-        width: var(--largura_fundo);
-        height: var(--altura_fundo);
-        margin: 0 auto;
-        display: grid;
-        align-items: start;
-        justify-items: start;
+    grid-template-areas:
+      "nav_bar nmr_os layout_area_1 logo nav_bar_dir"
+      "nav_bar layout_area_2 layout_area_2 layout_area_2 nav_bar_dir"
+      "nav_bar layout_area_3 layout_area_3 nome_arte nav_bar_dir"
+      "nav_bar nome_caminho nome_caminho nome_caminho nav_bar_dir";
 
-        grid-template-areas:
-            "nav_bar nmr_os layout_area_1 logo nav_bar_dir"
-            "nav_bar layout_area_2 layout_area_2 layout_area_2 nav_bar_dir"
-            "nav_bar layout_area_3 layout_area_3 nome_arte nav_bar_dir"
-            "nav_bar nome_caminho nome_caminho nome_caminho nav_bar_dir";
+    /*iamgem de gabarito*/
+    background-image: url(../gabarito_layout_uv.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    /*fundo*/
+    background-color: rgba(255, 0, 0, 0.1);
 
-        /*iamgem de gabarito*/
-        background-image: url(../gabarito_layout.png);
-        background-size: cover;
-        background-repeat: no-repeat;
-        /*fundo*/
-        background-color: rgba(255, 0, 0, 0.1);
-
-        *
-        {
-            background-color: rgba(255, 255, 0, 0.3);
-        }
-
-        .nmr_OS,
-        .nome_arte,
-        .nome_caminho
-        {
-            border-radius: 2.7204px;
-            overflow: hidden;
-            display: flex;
-
-            *
-            {
-                font-size: 8px;
-                line-height: 18.21px;
-                color: var(--cor_fonte_1);
-            }
-        }
-
-        .nav_bar
-        {
-            width: 177.2654px;
-            height: 100%;
-            margin: 0;
-
-            background-color: rgba(255, 255, 0, 0.3);
-            grid-area: nav_bar;
-
-            .tipo_impressao
-            {
-                width: 161.7079px;
-                height: 60.4625px;
-                margin-top: 8.66px;
-                border-radius: 6.1946px;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-evenly;
-
-                *
-                {
-                    width: 100%;
-                    font-size: 20px;
-                    color: white;
-                    text-align: center;
-                }
-
-                select
-                {
-                    /* height: 100%; */
-                    line-height: 18.21px;
-                    appearance: none;
-                    border: none;
-                    display: flex;
-
-                    align-items: center;
-                }
-
-                .estilo_botao
-                {
-                    width: 161.7079px;
-                    height: 383517px;
-                    color: var(--cor_fonte_1);
-                    font-size: 12px;
-
-                    input
-                    {
-                        color: var(--cor_fonte_2);
-
-                    }
-                }
-
-                .nmr_OS
-                {
-                    width: 111.7173px;
-                    height: 17.4086px;
-                    margin: var(--margin_topo) 0px 0px 2.7436px;
-
-                    background-color: rgba(255, 255, 0, 0.3);
-                    grid-area: nmr_os;
-
-                    display: flex;
-
-                    label
-                    {
-                        width: auto;
-                        margin-left: 7px;
-                    }
-
-                    input
-                    {
-                        width: 100%;
-                        height: 100%;
-                        border: none;
-                        margin-left: 2.94px;
-
-                        background-color: rgba(255, 0, 0, 0.1);
-                    }
-                }
-
-                .layout_area_1
-                {
-                    width: 425.5133px;
-                    height: 35.1412px;
-
-                    background-color: rgba(255, 0, 0, 0.1);
-                    grid-area: layout_area_1;
-                }
-
-                .logo
-                {
-                    width: 108.7112px;
-                    height: 26.9729px;
-                    margin: var(--margin_topo) 5.1526px 0px 0px;
-
-                    background-image: url(../img/logo_showmais.png);
-                    background-size: cover;
-                    grid-area: logo;
-                }
-
-                .layout_area_2
-                {
-                    width: 656.2407px;
-                    height: 520.6525px;
-
-                    background-color: rgba(255, 0, 0, 0.1);
-                    grid-area: layout_area_2;
-                }
-
-                .layout_area_3
-                {
-                    width: 539.9742px;
-                    height: 18.6438px;
-
-                    background-color: rgba(255, 0, 0, 0.1);
-                    grid-area: layout_area_3;
-                    margin: 0px;
-                }
-
-                .nav_bar_dir
-                {
-                    width: 8.6596px;
-                    height: 595.2756px;
-
-                    grid-area: nav_bar_dir;
-                }
-
-                .nome_arte
-                {
-                    width: 111.7173px;
-                    height: 17.4086px;
-
-                    grid-area: nome_arte;
-                    margin: 0px 4.5491px 0px 0px;
-
-                    label
-                    {
-                        margin-left: 7px;
-                    }
-
-                    select
-                    {
-                        width: 58px;
-                        appearance: none;
-                        border: none;
-                    }
-                }
-
-                .nome_caminho
-                {
-                    width: 648.948px;
-                    height: 17.4086px;
-
-                    grid-area: nome_caminho;
-                    margin: 0px 0px 2.7436px 3.2211px;
-
-                    label
-                    {
-                        width: 72.294px;
-                        height: 100%;
-                        margin-left: 4.05px;
-                        color: white;
-                    }
-
-                    input
-                    {
-                        width: 88%;
-                        height: 100%;
-                        border: none;
-                    }
-                }
-            }
-        }
+    * {
+      background-color: rgba(255, 255, 0, 0.3);
     }
+
+    input {
+      border: none;
+    }
+
+    .nmr_OS,
+    .nome_arte,
+    .nome_caminho {
+      border-radius: 2.7204px;
+      overflow: hidden;
+      display: flex;
+
+      * {
+        font-size: 8px;
+        line-height: 18.21px;
+        color: var(--cor_fonte_1);
+      }
+    }
+
+    .nav_bar {
+      width: 177.2654px;
+      height: 100%;
+      margin: 0;
+
+      background-color: rgba(255, 255, 0, 0.3);
+      grid-area: nav_bar;
+
+      .tipo_impressao {
+        width: 161.7079px;
+        height: 60.4625px;
+        margin-top: 8.66px;
+        border-radius: 6.1946px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+
+        * {
+          width: 100%;
+          font-size: 20px;
+          color: white;
+          text-align: center;
+        }
+
+        select {
+          /* height: 100%; */
+          line-height: 18.21px;
+          appearance: none;
+          border: none;
+          display: flex;
+
+          align-items: center;
+        }
+      }
+
+      .estilo_botao {
+        width: 161.7079px;
+        height: 38.3517px;
+        margin-top: 11.62px;
+        color: var(--cor_fonte_1);
+        font-size: 12px;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        overflow: hidden;
+        border-radius: 4.93px;
+
+        label {
+          width: 100%;
+          height: 50%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background-color: rgba(255, 0, 0, 0.1);
+          /* padding-bottom: 5px; */
+        }
+
+        :not(label){
+            width: 100%;
+          height: 50%;
+          color: var(--cor_fonte_2);
+          text-align: center;
+        }
+      }
+
+      .d_final {
+        margin-top: 18.85px;
+      }
+
+      .info_adicional {
+        height: 54.76px;
+
+        label {
+          height: 33.333%;
+          color: var(--cor_fonte_1);
+        }
+        #input_info_adicional{
+          width: 100%;
+          height: 66.666%;
+          display: flex;
+          justify-items: center;
+          resize: none;
+          border: none;
+        }
+      }
+    }
+
+    .nmr_OS {
+      width: 111.7173px;
+      height: 17.4086px;
+      margin: var(--margin_topo) 0px 0px 2.7436px;
+
+      background-color: rgba(255, 255, 0, 0.3);
+      grid-area: nmr_os;
+
+      display: flex;
+
+      label {
+        width: auto;
+        margin-left: 7px;
+      }
+
+      input {
+        width: 100%;
+        height: 100%;
+        border: none;
+        margin-left: 2.94px;
+
+        background-color: rgba(255, 0, 0, 0.1);
+      }
+    }
+
+    .layout_area_1 {
+      width: 425.5133px;
+      height: 35.1412px;
+
+      background-color: rgba(255, 0, 0, 0.1);
+      grid-area: layout_area_1;
+    }
+
+    .logo {
+      width: 108.7112px;
+      height: 26.9729px;
+      margin: var(--margin_topo) 5.1526px 0px 0px;
+
+      background-image: url(../img/logo_showmais.png);
+      background-size: cover;
+      grid-area: logo;
+    }
+
+    .layout_area_2 {
+      width: 656.2407px;
+      height: 520.6525px;
+
+      background-color: rgba(255, 0, 0, 0.1);
+      grid-area: layout_area_2;
+    }
+
+    .layout_area_3 {
+      width: 539.9742px;
+      height: 18.6438px;
+
+      background-color: rgba(255, 0, 0, 0.1);
+      grid-area: layout_area_3;
+      margin: 0px;
+    }
+
+    .nav_bar_dir {
+      width: 8.6596px;
+      height: 595.2756px;
+
+      grid-area: nav_bar_dir;
+    }
+
+    .nome_arte {
+      width: 111.7173px;
+      height: 17.4086px;
+
+      grid-area: nome_arte;
+      margin: 0px 4.5491px 0px 0px;
+
+      label {
+        margin-left: 7px;
+      }
+
+      select {
+        width: 58px;
+        appearance: none;
+        border: none;
+      }
+    }
+
+    .nome_caminho {
+      width: 648.948px;
+      height: 17.4086px;
+
+      grid-area: nome_caminho;
+      margin: 0px 0px 2.7436px 3.2211px;
+
+      label {
+        width: 72.294px;
+        height: 100%;
+        margin-left: 4.05px;
+        color: white;
+      }
+
+      input {
+        width: 88%;
+        height: 100%;
+        border: none;
+      }
+    }
+  }
 }
