adicionado gabarito_layout_lona

--- a/src/style.css
+++ b/src/style.css
@@ -34,7 +34,7 @@ body {
       "nav_bar nome_caminho nome_caminho nome_caminho nav_bar_dir";
 
     /*iamgem de gabarito*/
-    background-image: url(../gabarito_layout_uv.png);
+    background-image: url(../img/gabarito_layout_uv.png);
     background-size: cover;
     background-repeat: no-repeat;
     /*fundo*/
