--- a/src/style.css
+++ b/src/style.css
@@ -143,7 +143,7 @@ body {
           width: 100%;
           height: 66.666%;
           display: flex;
-          justify-items: center;
+          /* justify-items: center; */
           resize: none;
           border: none;
         }
