--- a/src/style.css
+++ b/src/style.css
@@ -122,28 +122,32 @@ body {
           /* padding-bottom: 5px; */
         }
 
-        :not(label){
-            width: 100%;
+        :not(label) {
+          width: 100%;
           height: 50%;
           color: var(--cor_fonte_2);
           text-align: center;
         }
       }
 
-      .d_final {
-        margin-top: 18.85px;
+      .informacoes_layout {
+        height: 468.6133px;
+
+        .d_final {
+          margin-top: 18.85px;
+        }
       }
 
       .info_adicional {
         height: 54.76px;
-        align-self: flex-end;
-        margin-bottom: 2.77px;
+        margin-top: 0;
 
         label {
           height: 33.333%;
           color: var(--cor_fonte_1);
         }
-        #input_info_adicional{
+
+        #input_info_adicional {
           width: 100%;
           height: 66.666%;
           display: flex;
