criando grid .informacoes_layout

--- a/index.ejs
+++ b/index.ejs
@@ -60,6 +60,18 @@
             <label for="acabamento">Acabamento</label>
             <input type="text" name="acabamento" placeholder="---" />
           </div>
+          <div class="estilo_botao bainha">
+            <label for="bainha">Bainha</label>
+            <input type="text" name="bainha" placeholder="---" />
+          </div>
+          <div class="estilo_botao mascara">
+            <label for="mascara">Máscara</label>
+            <input type="text" name="mascara" placeholder="---" />
+          </div>
+          <div class="estilo_botao laminacao">
+            <label for="laminacao">Laminação</label>
+            <input type="text" name="laminacao" placeholder="---" />
+          </div>
         </div>
 
         <div class="estilo_botao info_adicional">
