--- a/index.ejs
+++ b/index.ejs
@@ -42,19 +42,35 @@
           </div>
           <div class="estilo_botao impressao">
             <label for="impressao">Impressão</label>
-            <input type="text" name="impressao" placeholder="---" />
+            <select name="impressao" id="slct_impressao">
+              <option value="normal">Normal</option>
+              <option value="invertida">Invertida</option>
+            </select>
           </div>
           <div class="estilo_botao cores">
             <label for="cores">Cores</label>
-            <input type="text" name="cores" placeholder="---" />
+            <select name="cores" id="slct_cores">
+              <option value="sem">---</option>
+              <option value="1x0">1x0</option>
+              <option value="4x0">4x0</option>
+              <option value="5x0">5x0</option>
+            </select>
           </div>
           <div class="estilo_botao calco">
             <label for="calco">Calço</label>
-            <input type="text" name="calco" placeholder="---" />
+            <select name="calco" id="slct_calco">
+              <option value="sem">---</option>
+              <option value="branco_total">Branco Total</option>
+              <option value="branco_lcoalizado">Branco Localizado</option>
+            </select>
           </div>
           <div class="estilo_botao corte">
             <label for="corte">Corte</label>
-            <input type="text" name="corte" placeholder="---" />
+            <select name="corte" id="slct_corte">
+              <option value="sem">---</option>
+              <option value="especial">Especial</option>
+              <option value="reto">Reto</option>
+            </select>
           </div>
           <div class="estilo_botao acabamento">
             <label for="acabamento">Acabamento</label>
@@ -62,11 +78,20 @@
           </div>
           <div class="estilo_botao bainha">
             <label for="bainha">Bainha</label>
-            <input type="text" name="bainha" placeholder="---" />
+            <select name="bainha" id="slct_bainha">
+              <option value="sem">---</option>
+              <option value="simples">Simples</option>
+              <option value="dupla">Dupla</option>
+              <option value="tripla">Tripla + cordinha</option>
+            </select>
           </div>
           <div class="estilo_botao mascara">
             <label for="mascara">Máscara</label>
-            <input type="text" name="mascara" placeholder="---" />
+            <select name="mascara" id="slct_mascara">
+              <option value="sem">---</option>
+              <option value="papel">Papel</option>
+              <option value="transparente">Transparente</option>
+            </select>
           </div>
           <div class="estilo_botao laminacao">
             <label for="laminacao">Laminação</label>
