--- a/src/style.css
+++ b/src/style.css
@@ -136,6 +136,29 @@ body {
 
           align-items: center;
         }
+
+        .grupo_quantidade {
+          display: flex;
+          height: 50%;
+
+          * {
+            height: 100%;
+          }
+
+          input {
+            width: 49%;
+            text-align: right;
+          }
+
+          select {
+            width: 49%;
+
+            option {
+              text-align: left;
+            }
+          }
+
+        }
       }
 
       .informacoes_layout {
