--- a/src/style.css
+++ b/src/style.css
@@ -108,7 +108,7 @@ body {
             align-items: center;
 
             option {
-              color: #5E4F9C;
+              color: #5e4f9c;
             }
           }
         }
@@ -156,7 +156,7 @@ body {
             align-items: center;
 
             option {
-              color: #5E4F9C;
+              color: #5e4f9c;
             }
           }
 
@@ -180,22 +180,21 @@ body {
                 text-align: left;
               }
             }
-
           }
         }
 
         .informacoes_layout {
           display: grid;
           grid-template-areas:
-            'dimFinal'
-            'sangra'
-            'material'
-            'quantidade'
-            'impressao'
-            'cores'
-            'calco'
-            'corte'
-            'acabamento';
+            "dimFinal"
+            "sangra"
+            "material"
+            "quantidade"
+            "impressao"
+            "cores"
+            "calco"
+            "corte"
+            "acabamento";
 
           .bainha,
           .mascara,
@@ -296,7 +295,6 @@ body {
             color: var(--cor_fonte_2);
           }
         }
-
       }
 
       .nmr_OS {
@@ -493,5 +491,37 @@ body {
     }
   }
 
+  .selecaoPDF {
+    padding: 3vh;
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: 3vh;
+    color: var(--cor_fonte_2);
+    background-color: var(--cor_fonte_1);
+    
+    input[type='checkbox']{
+      cursor: pointer;
+    }
 
+    .arquivo {
+      color: var(--cor_fonte_2);
+
+      .arquivoSelecao {
+        width: 300px;
+        height: 300px;
+        background-color: red;
+      }
+    }
+    button#btnInserirPaginas{
+      padding: 2vh 4vh;
+      background-color: var(--cor_fonte_2);
+      color: var(--cor_fonte_1);
+      border: none;
+      border-radius: 1vh;
+      cursor: pointer;
+    }
+  }
 }
