--- a/src/style.css
+++ b/src/style.css
@@ -347,6 +347,7 @@ body {
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
         gap: 5px;
         justify-content: center;
+        justify-items: center;
         align-items: center;
 
         .container-img {
