--- a/src/style.css
+++ b/src/style.css
@@ -339,6 +339,7 @@ body {
       .layout_area_2 {
         width: 656.2407px;
         height: 520.6525px;
+        max-height: 520.6525px;
         grid-area: layout_area_2;
 
         overflow: hidden;
@@ -353,6 +354,7 @@ body {
         .container-img {
           width: 90%;
           height: auto;
+          max-height: 520.6525px;
           display: grid;
           grid-template-columns: auto auto;
           grid-template-rows: auto 1fr;
@@ -392,7 +394,7 @@ body {
 
             .arquivo_layout {
               max-width: 100%;
-              max-height: 100%;
+              max-height: calc(520.6525px - 12pt - (19px + 2px));
               object-fit: contain;
               display: block;
             }
