--- a/src/style.css
+++ b/src/style.css
@@ -515,6 +515,7 @@ body {
       .arquivoSelecao {
         width: 300px;
         height: 300px;
+        max-height: 300px;
         background-color: red;
       }
     }
