--- a/src/style.css
+++ b/src/style.css
@@ -493,9 +493,10 @@ body {
       }
     }
   }
-input:-webkit-autofill{
-  transition: background-color 0s 600000s, color 0s 600000s !important;
-}
+
+  input:-webkit-autofill {
+    transition: background-color 0s 600000s, color 0s 600000s !important;
+  }
 
   .selecaoPDF {
     padding: 3vh;
@@ -508,28 +509,24 @@ input:-webkit-autofill{
     color: var(--cor_fonte_2);
     background-color: var(--cor_fonte_1);
 
-    .chkSelecionarTudo{
+    .chkSelecionarTudo {
       text-align: center;
       cursor: pointer;
     }
 
-    input[type='checkbox']{
-      margin-right: 1vw;
-      cursor: pointer;
-    }
-    
     .arquivo {
       color: var(--cor_fonte_2);
       cursor: pointer;
 
-      .arquivoSelecao {
+            .arquivoSelecao {
         width: 300px;
         height: 300px;
         max-height: 300px;
         background-color: red;
       }
     }
-    button#btnInserirPaginas{
+
+    button#btnInserirPaginas {
       padding: 2vh 4vh;
       background-color: var(--cor_fonte_2);
       color: var(--cor_fonte_1);
@@ -539,3 +536,30 @@ input:-webkit-autofill{
     }
   }
 }
+
+
+/*ESTILIZAÇÃO CHECKBOX*/
+input[type=checkbox] {
+        margin-right: 1vw;
+        display: none;
+      }
+      label{
+        vertical-align: middle;
+      }
+
+      input[type=checkbox] + label:before {
+        width: 2vh;
+        height: 2vh;
+        margin-right: 1vh;
+        vertical-align: middle;
+        content: "";
+        display: inline-block;
+        background-color: white;
+        border-radius: 25%;
+      }
+
+      input[type=checkbox]:checked + label:before {
+        background-size: contain;
+        background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 10 10'%3E%3Cg class='nc-icon-wrapper' stroke-width='1' fill='%23555555'%3E%3Cpath fill='none' stroke='%23FFFFFF' stroke-linecap='round' stroke-linejoin='round' stroke-miterlimit='10' data-cap='butt' d='M2.83 4.72l1.58 1.58 2.83-2.83'/%3E%3C/g%3E%3C/svg%3E");
+        background-color: #5e4f9c;
+      }
