--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@
   --margin_dir: 4.5491px;
   --cor_fonte_1: #2d2c4f;
   --cor_fonte_2: #ffffff;
+  --cor_fonte_3: #5e4f9c;
 }
 
 @font-face {
@@ -492,6 +493,15 @@ body {
         }
       }
     }
+        button#btnSaveAsPNG {
+      padding: 2vh 4vh;
+      background-color: var(--cor_fonte_1);
+      color: var(--cor_fonte_2);
+      border: none;
+      border-radius: 1vh;
+      cursor: pointer;
+    }
+
   }
 
   input:-webkit-autofill {
@@ -505,9 +515,10 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    row-gap: 3vh;
+    row-gap: 5vh;
     color: var(--cor_fonte_2);
     background-color: var(--cor_fonte_1);
+    border-radius: 3vh;
 
     .chkSelecionarTudo {
       text-align: center;
@@ -518,7 +529,7 @@ body {
       color: var(--cor_fonte_2);
       cursor: pointer;
 
-            .arquivoSelecao {
+      .arquivoSelecao {
         width: 300px;
         height: 300px;
         max-height: 300px;
@@ -537,29 +548,24 @@ body {
   }
 }
 
-
 /*ESTILIZAÇÃO CHECKBOX*/
-input[type=checkbox] {
-        margin-right: 1vw;
-        display: none;
-      }
-      label{
-        vertical-align: middle;
-      }
+input[type="checkbox"] {
+  display: none;
+}
+input[type="checkbox"] + label::before {
+  width: 18px;
+  height: 18px;
+  margin-right: 1vh;
+  margin-bottom: 1vh;
+  vertical-align: text-top;
+  content: "";
+  display: inline-block;
+  background-color: var(--cor_fonte_2);
+  border-radius: 25%;
+}
 
-      input[type=checkbox] + label:before {
-        width: 2vh;
-        height: 2vh;
-        margin-right: 1vh;
-        vertical-align: middle;
-        content: "";
-        display: inline-block;
-        background-color: white;
-        border-radius: 25%;
-      }
-
-      input[type=checkbox]:checked + label:before {
-        background-size: contain;
-        background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 10 10'%3E%3Cg class='nc-icon-wrapper' stroke-width='1' fill='%23555555'%3E%3Cpath fill='none' stroke='%23FFFFFF' stroke-linecap='round' stroke-linejoin='round' stroke-miterlimit='10' data-cap='butt' d='M2.83 4.72l1.58 1.58 2.83-2.83'/%3E%3C/g%3E%3C/svg%3E");
-        background-color: #5e4f9c;
-      }
+input[type="checkbox"]:checked + label::before {
+  background-size: contain;
+  background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 10 10'%3E%3Cg class='nc-icon-wrapper' stroke-width='1' fill='%23555555'%3E%3Cpath fill='none' stroke='%23FFFFFF' stroke-linecap='round' stroke-linejoin='round' stroke-miterlimit='10' data-cap='butt' d='M2.83 4.72l1.58 1.58 2.83-2.83'/%3E%3C/g%3E%3C/svg%3E");
+  background-color: var(--cor_fonte_3);
+}
