--- a/src/style.css
+++ b/src/style.css
@@ -574,7 +574,15 @@ body {
           width: 300px;
           height: 300px;
           max-height: 300px;
-          background-color: red;
+          background-color: var(--cor_fonte_3);
+          display: flex;
+          align-items: center;
+          
+          img,canvas{
+            max-width: 100%;
+            max-height: 100%;
+            background-size: contain;
+          }
         }
       }
     }
